# pre-ablo

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  glew.cmake  host.cmake  listfile.txt  mingw.toolchain.cmake  stormlib.cmake  win32.cmake
!Tools/: .gitignore  README.md  apply.bat  apply.sh  listfile.txt
!Tools/diabutil/: CMakeLists.txt
!Tools/diabutil/cel2png/: CMakeLists.txt
!Tools/diabutil/cel2png/src/: main.cpp
!Tools/diabutil/diabutil/: CMakeLists.txt
!Tools/diabutil/diabutil/include/diabutil/: cel.hpp  color.hpp  file.hpp  image.hpp
!Tools/diabutil/diabutil/src/: cel.cpp  palette.cpp
!Tools/diabutil/drawtextpcx/: CMakeLists.txt
!Tools/diabutil/drawtextpcx/src/: main.cpp
!Tools/diabutil/joincel/: CMakeLists.txt
!Tools/diabutil/joincel/src/: main.cpp
!Tools/diabutil/joingroups/src/: main.cpp
!Tools/diabutil/mpqadd/: CMakeLists.txt  README.md
!Tools/diabutil/mpqadd/src/: main.cpp
!Tools/diabutil/retail2prdemo/src/: main.cpp
!Tools/diabutil/splitcel/: CMakeLists.txt
!Tools/diabutil/splitcel/src/: main.cpp
!Tools/diabutil/splitgroups/: CMakeLists.txt
!Tools/make_mpq/: CMakeLists.txt
!Tools/make_mpq/src/: main.cpp
!Tools/mpq_extract_all/: CMakeLists.txt  README.md
!Tools/mpq_extract_all/src/: main.cpp
!Tools/mpqadd/: CMakeLists.txt  README.md
!Tools/mpqadd/src/: main.cpp
00_dplay/: CMakeLists.txt  README.md  dll.cpp  fake_ordinals.cpp  fake_ordinals.def  patches.hpp  savegame_path_fix.cpp  version_override.cpp
00_dplay/src/: dllmain.cpp  macros.hpp  patches.cpp  patches.hpp  structs.hpp  util.cpp  util.hpp  variables.cpp  variables.hpp
00_dplay/src/patches/: always_load_flare.cpp  automap_fix.cpp  cheat.cpp  devmode.cpp  fullgame.cpp  goofy.cpp  infraring_fix.cpp  instacast.cpp  max_monster_types.cpp  max_monsters.cpp  mega_fix.cpp  monster_density_x2.cpp  more_music.cpp  music_nompq_fix.cpp  no_tp_light.cpp  old_drlg.cpp  options_menu.cpp  retail_music.cpp  savegame_path_fix.cpp  skip_intros.cpp  skip_outro.cpp  snake_frame_fix.cpp  stone_curse_missile_fix.cpp  thunder_demon_missile_fix.cpp  too_much_hp_crash.cpp  towncast.cpp  tp_setlevel_fix.cpp  undead_crown.cpp  version_override.cpp  window.cpp  z_hook.cpp
00_dplay/src/patches/options_menu/: IComponent.hpp  main.cpp
01_ddraw/: README.md
02_missing_gfx/: README.md  add_missing.sh
_DOCS/: README.txt  banner.xcf
always_load_flare/: README.md  diablo.exe.vcdiff  meta.xml
assets/: README.md  cl2_to_cel.py  package.sh  (+17 more)
ddraw/: CMakeLists.txt  README.md  ddraw.cpp  ddraw_impl.cpp  ddraw_impl.h  log.h  mingw.toolchain.cmake  palette.h  stub.h  surface.cpp  surface.h
diabutil/: CMakeLists.txt  README.md  stormlib.cmake
diabutil/StormLib_hack/: StormLib.h
diabutil/allitemslist/: CMakeLists.txt  main.cpp
diabutil/cel2png/: CMakeLists.txt  README.md
diabutil/cel2png/src/: main.cpp
diabutil/cl2_to_cel/: CMakeLists.txt  main.cpp
diabutil/diabutil/: CMakeLists.txt  README.md
diabutil/diabutil/include/diabutil/: cel.hpp  color.hpp  file.hpp  image.hpp  palette.hpp  span.hpp  types.hpp
diabutil/diabutil/src/: cel.cpp  file.cpp  image.cpp  palette.cpp
diabutil/diabutil/tests/: test_cel.cpp  test_color.cpp  test_palette.cpp
diabutil/dr_pcx/: README.md
diabutil/dr_pcx/src/: dr_pcx.c
diabutil/drawtext/: README.md
diabutil/drawtext/src/: main.cpp
diabutil/drawtextpcx/src/: main.cpp
diabutil/fixamp/: CMakeLists.txt
diabutil/fixamp/src/: main.cpp
diabutil/integration_tests/: .gitignore  README.md  run_integration_tests.py  run_integration_tests.sh  setup_assets.py  setup_assets.sh
diabutil/integration_tests/golden/: README.md
diabutil/joincel/src/: main.cpp
diabutil/joingroups/src/: main.cpp
diabutil/mpqadd/: CMakeLists.txt  README.md
diabutil/mpqadd/src/: main.cpp
diabutil/mpqextract/: CMakeLists.txt  README.md
diabutil/mpqextract/src/: main.cpp
diabutil/png2cel/: CMakeLists.txt  README.md
diabutil/png2cel/src/: main.cpp
diabutil/retail2prdemo/: CMakeLists.txt
diabutil/retail2prdemo/src/: main.cpp
diabutil/splitcel/src/: main.cpp
diabutil/splitgroups/src/: main.cpp
diabutil/stb_image/: CMakeLists.txt  README.md
diabutil/stb_image/src/: stb_image.c
diabutil/stb_image_write/: README.md
dplay/: CMakeLists.txt  Dockerfile  README.md  mingw.toolchain.cmake  version.h.in
dplay/src/: dllmain.cpp  enums.hpp  functions.cpp  functions.hpp  macros.hpp  patches.cpp  patches.hpp  structs.hpp  util.cpp  variables.cpp  variables.hpp
dplay/src/patches/: enable_cut_monsters.cpp  enable_fireman.cpp  enable_unfinished_monsters.cpp  infinite_mana.cpp  load_mpq_customizations.cpp  magic_find_x3.cpp  mega_fix.cpp  no_cpu_hog.cpp  old_drlg.cpp  options_menu.cpp  plrgfx_frame_fix.cpp  randomize_leveltype.cpp  snake_frame_fix.cpp  stone_curse_missile_fix.cpp  too_much_hp_crash.cpp  tp_setlevel_fix.cpp  version_override.cpp  z_hook.cpp
reset_dungeon/: CMakeLists.txt  README.md  format.md  main.c  structs.h
src/ddraw/: CMakeLists.txt  ddraw.cpp  ddraw.def  ddraw_impl.cpp  ddraw_impl.h  palette.cpp  stub.h  surface.cpp  test.cpp
src/dplay/: CMakeLists.txt  README.md  dplay.cpp  structs.hpp  variables.cpp
src/dplay/patches/: automap_fix.cpp  only_magma_demons.cpp  skip_intros.cpp  snake_frame_fix.cpp  tp_setlevel_fix.cpp
src/patches/: CMakeLists.txt  README.md  enums.hpp  functions.cpp  functions.hpp  patches.cpp  patches.hpp  structs.hpp  util.hpp  variables.cpp  variables.hpp
src/patches/patches/: always_load_flare.cpp  blood_boil_fix.cpp  bone_chamber_stairs_fix.cpp  cheat.cpp  enable_cut_monsters.cpp  enable_unfinished_monsters.cpp  fast_load.cpp  infraring_fix.cpp  load_mpq_customizations.cpp  main_loop_yield_fix.cpp  mega_fix.cpp  no_death_anim.cpp  old_drlg.cpp  old_guardian.cpp  options_menu.cpp  panic_teleport.cpp  performance_improvements.cpp  plrgfx_frame_fix.cpp  remove_promo.cpp  skip_intros.cpp  skip_outro.cpp  stone_curse_load_fix.cpp  stone_curse_target_fix.cpp  thunder_demon_missile_fix.cpp  too_much_hp_crash.cpp  tp_load_fix.cpp  tp_setlevel_fix.cpp  unimplemented_spells_fix.cpp  z_hook.cpp
(+749 files in other folders)
